<resources>
    <string name="app_name">Poc_CamScanner</string>
    <string name="cam_scanner">Cam scanner process</string>
    <string name="normal">other process</string>

    <string name="instruction_cam_scanner">Instructions</string>
    <string name="step_one">1. Launch cam scanner app</string>
    <string name="step_two">2. Scan your file</string>
    <string name="step_three">3. Save your file</string>
    <string name="step_four">4. Back to the application</string>
    <string name="btn_ok">OK</string>
</resources>
