<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="160dp">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_cam_scanner"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one"
        android:layout_marginTop="10dp"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_two"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_three"/>
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_four"/>
    
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:textColor="#2962FF"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="end"/>

</LinearLayout>